creating / updating of the ratings for the movies using POST / GET fetch requests

--- a/app/frontend-app/movie-rater-web/src/App.css
+++ b/app/frontend-app/movie-rater-web/src/App.css
@@ -18,3 +18,16 @@
 .orange {
   color: orange;
 }
+
+.purple {
+  color: purple;
+}
+
+.rate-container {
+  border-top: 2px solid purple;
+}
+
+.rate-container span.fa{
+  font-size: 2em;
+  cursor: pointer;
+}
