Feature frontend web app (#4)
* creating / updating of the ratings for the movies using POST / GET fetch requests

* added batch script to run web app

* new options in settings.py

* changed command to start react app to make available in the local network

* added .env file to store env variables

* added fontawesome icons for edit / delete

* working on removeClicked function

* implemented new function : deleteMovie

* added new icon favicon

* -> movie list update func added

* package.json and .gitignore updated

* .gitignore is now working

--- a/app/frontend-app/movie-rater-web/src/App.css
+++ b/app/frontend-app/movie-rater-web/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 100vh;
-  font-size: calc(10px + 2vmin);
+  min-height: calc(100vh - 100px);
   color: white;
   margin: 0;
   padding: 50px;
@@ -17,4 +16,112 @@
 
 .orange {
   color: orange;
+}
+
+.purple {
+  color: purple;
+}
+
+.rate-container {
+  border-top: 2px solid purple;
+}
+
+.rate-container span.fa{
+  font-size: 2em;
+  cursor: pointer;
+}
+
+.movieList {
+  display: flex;
+  align-items: center;
+}
+
+.movieList__edit-update {
+  margin-left: 0.5em;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.movieList__edit-update span {
+  margin: 0.2em;
+  font-size: 0.8em;
+  cursor: pointer;
+}
+
+
+.movieList__update {
+  color: #bd8928;
+}
+
+.movieList__trash {
+  color: rgba(225, 139, 139, 0.57);
+}
+.movieList__add {
+  color: greenyellow;
+  cursor: pointer;
+}
+
+.movieList hr {
+  width: 50%;
+  color: orange;
+  filter: blur(1px);
+}
+
+button {
+  color: #444444;
+  background-color: #f3f3f3;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 0.8em;
+  outline: none;
+}
+
+button:disabled {
+  color: #f3f3f3;
+  background-color: #444444;
+  cursor: not-allowed;
+}
+
+.movie-form__button-grp {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  margin: 20px 20px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  font-size: x-large;
+}
+
+h2 {
+  margin: 10px 0;
+  font-size: 1.5em;
+}
+
+h1 {
+  color: #ff6400;
+  font-size: 3em;
+  filter: drop-shadow(16px 16px 10px black);
+}
+
+h1 span.fa {
+  font-size: 1.1em;
+
+  position: relative;
+  top: -20px;
+  left: 140px;
+  transform: rotate(30deg);
+
+  color: white;
+  filter: blur(1px)
+}
+
+.login-container {
+  width: 50%;
+  margin: 50px 25%;
 }
